@@ -17,6 +17,8 @@ Revision 0.2.8, released XX-XX-2019
 - Added RFC6187 providing Certificates for Secure Shell Authentication
 - Added RFC6482 providing RPKI Route Origin Authorizations (ROAs)
 - Added RFC6664 providing S/MIME Capabilities for Public Keys
+- Added RFC6120 providing Extensible Messaging and Presence Protocol
+  names in certificates
 
 Revision 0.2.7, released 09-10-2019
 -----------------------------------
